[gd_scene load_steps=12 format=3 uid="uid://d1yhjvouya8ub"]

[ext_resource type="Script" path="res://hud/pause_menu.gd" id="1_4lpn6"]
[ext_resource type="FontFile" uid="uid://juct8ln4pvhc" path="res://fonts/Xolonium-Regular.ttf" id="2_ug72u"]
[ext_resource type="PackedScene" uid="uid://bqcet2yxkjg6v" path="res://hud/SoundButton/sound_btn.tscn" id="3_0efoy"]
[ext_resource type="Texture2D" uid="uid://dgxyjkvu7ija0" path="res://hud/SoundButton/Art/MusicIcon.png" id="4_2mldc"]
[ext_resource type="Texture2D" uid="uid://clgce6tfphkio" path="res://hud/SoundButton/Art/MusicIconMute.png" id="5_8uc0n"]
[ext_resource type="Texture2D" uid="uid://wbt36qacffjn" path="res://hud/SoundButton/Art/SoundIcon.png" id="6_dl1a5"]
[ext_resource type="Texture2D" uid="uid://d1x5qkruk00cp" path="res://hud/SoundButton/Art/SoundIconMute.png" id="7_d8gdx"]

[sub_resource type="LabelSettings" id="LabelSettings_uv6oy"]
font_size = 400

[sub_resource type="Gradient" id="Gradient_k558t"]
offsets = PackedFloat32Array(0.527559, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.694118)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3tx18"]
gradient = SubResource("Gradient_k558t")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_07btp"]
font = ExtResource("2_ug72u")
font_size = 35

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_4lpn6")

[node name="CountdownControl" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Countdown" type="Label" parent="CountdownControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -68.5
offset_right = 28.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_uv6oy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("GradientTexture2D_3tx18")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -161.0
offset_right = 81.0
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_07btp")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -90.0
offset_right = 56.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ug72u")
theme_override_font_sizes/font_size = 20
text = "RESUME"

[node name="Restart" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ug72u")
theme_override_font_sizes/font_size = 20
text = "RESTART"

[node name="Quit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ug72u")
theme_override_font_sizes/font_size = 20
text = "QUIT"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Music" parent="Control/VBoxContainer/HBoxContainer" instance=ExtResource("3_0efoy")]
layout_mode = 2
icon = ExtResource("4_2mldc")
icons = Array[CompressedTexture2D]([ExtResource("4_2mldc"), ExtResource("5_8uc0n")])

[node name="SFX" parent="Control/VBoxContainer/HBoxContainer" instance=ExtResource("3_0efoy")]
layout_mode = 2
icon = ExtResource("6_dl1a5")
icons = Array[CompressedTexture2D]([ExtResource("6_dl1a5"), ExtResource("7_d8gdx")])

[connection signal="pressed" from="Control/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/Music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/SFX" to="." method="_on_sfx_pressed"]
